syntax = "proto3";

package state.v1;

import "state/v1/enum.proto";


message SideConditions { 
    bool auroraveil = 1;
    bool craftyshield = 2;
    bool lightscreen = 3;
    bool luckychant = 4;
    bool matblock = 5;
    bool mist = 6;
    bool quickguard = 7;
    bool reflect = 8;
    bool safeguard = 9;
    bool spikes = 10;
    bool stealthrock = 11;
    bool stickyweb = 12;
    bool tailwind = 13;
    bool toxicspikes = 14;
    bool wideguard = 15;
}

message VolatileStatuses { 
	bool attract = 1;
	bool banefulbunker = 2;
	bool beakblast = 3;
	bool bide = 4;
	bool bounce = 5;
	bool burningbulwark = 6;
	bool charge = 7;
	bool choicelock = 8;
	bool commanded = 9;
	bool commanding = 10;
	bool confusion = 11;
	bool counter = 12;
	bool cudchew = 13;
	bool curse = 14;
	bool defensecurl = 15;
	bool destinybond = 16;
	bool detect = 17;
	bool dig = 18;
	bool disable = 19;
	bool dive = 20;
	bool dragoncheer = 21;
	bool dynamax = 22;
	bool electrify = 23;
	bool embargo = 24;
	bool encore = 25;
	bool endure = 26;
	bool flashfire = 27;
	bool flinch = 28;
	bool fling = 29;
	bool fly = 30;
	bool focusenergy = 31;
	bool focuspunch = 32;
	bool followme = 33;
	bool foresight = 34;
	bool furycutter = 35;
	bool gastroacid = 36;
	bool gem = 37;
	bool glaiverush = 38;
	bool grudge = 39;
	bool healblock = 40;
	bool helpinghand = 41;
	bool iceball = 42;
	bool imprison = 43;
	bool ingrain = 44;
	bool kingsshield = 45;
	bool laserfocus = 46;
	bool leechseed = 47;
	bool leppaberry = 48;
	bool lockedmove = 49;
	bool lockon = 50;
	bool magiccoat = 51;
	bool magnetrise = 52;
	bool maxguard = 53;
	bool metronome = 54;
	bool micleberry = 55;
	bool minimize = 56;
	bool miracleeye = 57;
	bool mirrorcoat = 58;
	bool mustrecharge = 59;
	bool nightmare = 60;
	bool noretreat = 61;
	bool obstruct = 62;
	bool octolock = 63;
	bool partiallytrapped = 64;
	bool partialtrappinglock = 65;
	bool perishsong = 66;
	bool phantomforce = 67;
	bool powder = 68;
	bool powershift = 69;
	bool powertrick = 70;
	bool protect = 71;
	bool protosynthesis = 72;
	bool quarkdrive = 73;
	bool rage = 74;
	bool ragepowder = 75;
	bool rollout = 76;
	bool rolloutstorage = 77;
	bool roost = 78;
	bool saltcure = 79;
	bool shadowforce = 80;
	bool shelltrap = 81;
	bool silktrap = 82;
	bool skydrop = 83;
	bool slowstart = 84;
	bool smackdown = 85;
	bool snatch = 86;
	bool sparklingaria = 87;
	bool spikyshield = 88;
	bool spotlight = 89;
	bool stall = 90;
	bool stockpile = 91;
	bool substitute = 92;
	bool substitutebroken = 93;
	bool syrupbomb = 94;
	bool tarshot = 95;
	bool taunt = 96;
	bool telekinesis = 97;
	bool throatchop = 98;
	bool torment = 99;
	bool trapped = 100;
	bool truant = 101;
	bool twoturnmove = 102;
	bool unburden = 103;
	bool uproar = 104;
	bool yawn = 105;
	bool zenmode = 106;
    bool aquaring = 107;
}

message Boosts { 
    sint32 atk = 1;
    sint32 def = 2;
    sint32 spa = 3;
    sint32 spd = 4;
    sint32 spe = 5;
    sint32 accuracy = 6;
    sint32 evasion = 7;
}

message Pseudoweathers {
    bool fairylock = 1;
    int32 fairylock_min_dur = 2;
    int32 fairylock_max_dur = 3;
	bool gravity = 4;
    int32 gravity_min_dur = 5;
    int32 gravity_max_dur = 6;
	bool iondeluge = 7;
    int32 iondeluge_min_dur = 8;
    int32 iondeluge_max_dur = 9;
	bool magicroom = 10;
    int32 magicroom_min_dur = 11;
    int32 magicroom_max_dur = 12;
	bool mudsport = 13;
    int32 mudsport_min_dur = 14;
    int32 mudsport_max_dur = 15;
	bool trickroom = 16;
    int32 trickroom_min_dur = 17;
    int32 trickroom_max_dur = 18;
	bool watersport = 19;
    int32 watersport_min_dur = 20;
    int32 watersport_max_dur = 21;
	bool wonderroom = 22;
    int32 wonderroom_min_dur = 23;
    int32 wonderroom_max_dur = 24;
}

message Weather {
    Weathers weather = 1;
    int32 min_dur = 2;
    int32 max_dur = 3;
}

message Terrains {
    Terrain terrain = 1;
    int32 min_dur = 2;
    int32 max_dur = 3;
}

message Field {
    Pseudoweathers pseudoweather = 1;
    Weather weather = 2;
    Terrains terrain = 3;
}

message Context {
    SideConditions side_conditions1 = 1;
    SideConditions side_conditions2 = 2;
    VolatileStatuses volatile_status1 = 3;
    VolatileStatuses volatile_status2 = 4;
    Boosts boosts1 = 5;
    Boosts boosts2 = 6;
    Field field = 7;
}