syntax = "proto3";

package state.v1;

import "state/v1/enum.proto";


message Pokemon {
    Species species = 1;
    Items item = 2;
    Abilities ability = 3;
    float hp = 4;
    bool active = 5;
    bool fainted = 6;
    int32 status = 7;
    int32 last_move = 8;
    bool public = 9;
    bool side = 10;
    int32 sleep_turns = 11;
    int32 toxic_turns = 12;
    int32 move1_ppleft = 13;
    int32 move2_ppleft = 14;
    int32 move3_ppleft = 15;
    int32 move4_ppleft = 16;
    int32 move1_ppmax = 17;
    int32 move2_ppmax = 18;
    int32 move3_ppmax = 19;
    int32 move4_ppmax = 20;
    Moves move1 = 21;
    Moves move2 = 22;
    Moves move3 = 23;
    Moves move4 = 24;
}

message Team {
    Pokemon pokemon1 = 1;
    Pokemon pokemon2 = 2;
    Pokemon pokemon3 = 3;
    Pokemon pokemon4 = 4;
    Pokemon pokemon5 = 5;
    Pokemon pokemon6 = 6;
}